@@ -7,6 +7,7 @@ Changelog: February 24, 2013
 
 = CSS =
 * Add `clear: both` to 'img.aligncenter, img.center' to fix Firefox issue with large images placed close to the featured image
+* Added CSS relevant to the "Monster" plugin that represents the default WordPress core plugins
 
 = Miscellaneous =
 * Updated 'style.css' header block to use labels as noted in core trac ticket #16868
